v3.1.23 (XXXX-XX-XX)
--------------------

* fix invalid locking in JWT authentication cache, which could have
  crashed the server


v3.1.22 (2017-06-07)
--------------------

* fix UB in traverser

* fixed issue #2505: Problem with export + report of a bug

* documented changed behavior of WITH

* fixed ui glitch in aardvark

* avoid agency compaction bug

* fixed issue #2283: disabled proxy communication internally

* agency no longer responds prematurely when started from persistence

* agency handles huge arrays of transactions


v3.1.21 (2017-05-22)
--------------------

* fixed issue #2488:  AQL operator IN error when data use base64 chars

* more randomness in seeding RNG


v3.1.20 (2017-05-16)
--------------------

* fixed incorrect sorting for distributeShardsLike

* improve reliability of AgencyComm communication with Agency

* fixed shard numbering bug, where ids were erouneously incremented by 1

* remove an unnecessary precondition in createCollectionCoordinator

* funny fail rotation fix

* fix in SimpleHttpClient for correct advancement of readBufferOffset

* forward SIG_HUP in supervisor process to the server process to fix logrotaion
  You need to stop the remaining arangod server process manually for the upgrade to work.


v3.1.19 (2017-04-28)
--------------------

* fixed issue #2453: GraphBrowser "Expand" function doesn't load all possible edges

* fixed issue #2448: Intermittent issue where ArangoDB Web UI takes no action when Delete button is clicked for a document

* fixed issue #2442: Frontend shows already deleted databases during login

* added 'x-content-type-options: nosniff' to avoid MSIE bug

* fixed issue #2441: dead/old link in foxx-manager help

* fixed issue #2440: Indexing break replication

* Fixed a StackOverflow issue in Traversal and ShortestPath. Occured if many (>1000) input
  values in a row do not return any result. Fixes issue: #2445

* fix occasional hanging shutdowns on OS X
