@@ -1,5 +1,5 @@
 /*jshint globalstrict:false, strict:false, maxlen: 500 */
-/*global assertEqual, AQL_EXECUTE, AQL_EXPLAIN */
+/*global assertEqual, assertTrue, AQL_EXECUTE, AQL_EXPLAIN */
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief tests for COLLECT w/ COUNT
@@ -256,6 +256,38 @@ function optimizerCollectMethodsTestSuite () {
         var results = AQL_EXECUTE(query[0]);
         assertEqual(query[1], results.json.length);
       });
+    },
+
+    testSkip : function () {
+      for (var i = 0; i < 10000; ++i) {
+        c.insert({ value: "test" + i });
+      }
+
+      var query = "FOR doc IN " + c.name() + " COLLECT v = doc.value INTO group LIMIT 1, 2 RETURN group"; 
+        
+      var plan = AQL_EXPLAIN(query).plan;
+
+      var aggregateNodes = 0;
+      var sortNodes = 0;
+      plan.nodes.map(function(node) {
+        if (node.type === "CollectNode") {
+          ++aggregateNodes;
+          assertEqual("sorted", node.collectOptions.method);
+        }
+        if (node.type === "SortNode") {
+          ++sortNodes;
+        }
+      });
+        
+      assertEqual(1, aggregateNodes);
+      assertEqual(1, sortNodes);
+
+      var result = AQL_EXECUTE(query).json;
+      assertEqual(2, result.length);
+      assertTrue(Array.isArray(result[0]));
+      assertTrue(Array.isArray(result[1]));
+      assertEqual(1, result[0].length);
+      assertEqual(1, result[1].length);
     },
 
 ////////////////////////////////////////////////////////////////////////////////
