@@ -1,6 +1,9 @@
 v3.1.23 (XXXX-XX-XX)
 --------------------
 
+* fix invalid first group results for sorted AQL COLLECT when LIMIT
+  was used
+
 * fix invalid locking in JWT authentication cache, which could have
   crashed the server
 
